# cabal-offline

./: cabal-offline.cabal
src/: Main.hs  Main2.hs
