cabal-version:       2.0
name:                cabal-offline
version:             0
synopsis:            tool for generating offline distributions
license:             GPL-3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Distribution
build-type:          Simple

executable cabal-offline
  main-is:             Main.hs
  build-depends:       base       ^>= 4.9.0.0 || ^>= 4.10.0.0 || ^>= 4.11.0.0
                     , cabal-plan ^>= 0.3.0.0
                     , containers ^>= 0.5.11.0
                     , filepath   ^>= 1.4.2
                     , directory  ^>= 1.3.1.5
                     , text       ^>= 1.2.3
                     , process
                     , bytestring

  hs-source-dirs:      src
  default-language:    Haskell2010


executable cabal-offline2
  main-is:             Main2.hs
  build-depends:       base       ^>= 4.9.0.0 || ^>= 4.10.0.0 || ^>= 4.11.0.0
                     , cabal-plan ^>= 0.3.0.0
                     , containers ^>= 0.5.11.0
                     , filepath   ^>= 1.4.2
                     , directory  ^>= 1.3.1.5
                     , text       ^>= 1.2.3
                     , cryptohash-sha256
                     , process
                     , bytestring

  hs-source-dirs:      src
  default-language:    Haskell2010
